[package]
name = "async_logger"
version = "0.1.0"
authors = ["stencillogic"]
edition = "2018"
license = "MIT"
description = "Asyncronous logger allows writing arbitrary u8 slices to a memory buffer, that then processed by a writer in it's own thread."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

