[package]
name = "async_logger"
version = "0.2.6"
authors = ["stencillogic <stencillogic@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Asyncronous logger allows writing arbitrary u8 slices to a memory buffer, which then processed by a writer in it's own thread."
categories = ["asynchronous", "concurrency"]
keywords = ["async", "logging", "logger"]
repository = "https://github.com/stencillogic/async_logger"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metrics = []
